feat(api): added session state endpoint
